# rust_app

./: .gitignore  Cargo.toml  Cargo_egui.toml  GUI_SETUP.md  README.md  RUST_UI_FRAMEWORKS.md  RUST_VS_PYTHON.md  UPDATE_RUST.md  WEB_GUIDE.md  main.py  object_detection.py  readme.md
src/: main.rs  main_egui.rs  main_linux.rs  main_object_detection.rs  main_tui.rs  main_web.rs  object_detection.rs
static/: index.html
