[package]
name = "rust_app"
version = "0.1.0"
edition = "2021"

[features]
default = []
webcam = ["opencv-highgui"]
opencv-highgui = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
# OpenCV - Uncomment setelah install system dependencies
# Install: sudo apt-get install libopencv-dev libclang-dev
# Set: export LIBCLANG_PATH="/usr/lib/x86_64-linux-gnu"
# OpenCV - Rust 1.92.0 sudah cukup untuk OpenCV 0.88
# OpenCV - Minimal features untuk webcam
# Note: DNN module menyebabkan panic saat build, jadi kita disable default features
opencv = { version = "0.88", default-features = false, features = ["videoio", "highgui", "imgproc", "imgcodecs"] }
image = "0.24"

# GUI dependencies (optional - uncomment untuk pakai GUI version)
# NOTE: GUI version require Rust yang lebih baru (1.76+)
# Untuk sekarang, gunakan TUI version yang compatible dengan Rust 1.75
# eframe = "0.22"
# egui = "0.22"

# GTK-rs untuk Linux Desktop App (Native Linux GUI)
# NOTE: GTK-rs require Rust yang lebih baru (1.76+)
# Untuk Rust 1.75, gunakan Web version atau TUI version sebagai alternatif
# Error: fragile dependency yanked - GTK 0.6 tidak compatible dengan Rust 1.75
# Solusi: Update Rust dulu atau gunakan web/TUI version
# gtk = "0.6"
# glib = "0.18"

[[bin]]
name = "rust_app"
path = "src/main.rs"

# GUI version (egui) - Comment out karena require Rust 1.76+
# [[bin]]
# name = "rust_app_gui"
# path = "src/main_egui.rs"

[[bin]]
name = "rust_app_tui"
path = "src/main_tui.rs"

[[bin]]
name = "rust_app_web"
path = "src/main_web.rs"

[[bin]]
name = "rust_object_detection"
path = "src/main_object_detection.rs"

# Linux Desktop App - Comment out karena require Rust 1.76+
# Uncomment setelah update Rust dan uncomment GTK dependencies di atas
# [[bin]]
# name = "rust_app_linux"
# path = "src/main_linux.rs"

